--- a/Jitzu.Shell/Jitzu.Shell.csproj
+++ b/Jitzu.Shell/Jitzu.Shell.csproj
@@ -15,6 +15,10 @@
 
   <ItemGroup>
     <PackageReference Include="Clap.Net" Version="0.1.32-beta" />
+    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.269">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="System.CommandLine" Version="2.0.2" />
   </ItemGroup>
 
