Add for-loop mutation guard, Value[] list optimization, and migrate to TUnit
- Prevent compile-time mutation of the collection variable inside for-each
  loop bodies (AstTransformer raises an error at the assignment site)
- Optimize NewList to allocate Value[] instead of object[], eliminating
  boxing overhead; update IndexGetDirect/IndexGet/IndexSet with Value[] fast paths
- Migrate test framework from NUnit to TUnit; assertions updated throughout,
  MTP runner config added via global.json; test runtime drops from 21s to 6s
  with all 135 tests passing

--- a/Jitzu.Tests/Jitzu.Tests.csproj
+++ b/Jitzu.Tests/Jitzu.Tests.csproj
@@ -6,25 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-    <PackageReference Include="NUnit" Version="4.4.0" />
-    <PackageReference Include="NUnit.Analyzers" Version="4.11.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="NUnit3TestAdapter" Version="5.2.0" />
+    <PackageReference Include="TUnit" Version="*" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="NUnit.Framework" />
+    <Using Include="TUnit.Core" />
+    <Using Include="TUnit.Assertions" />
+    <Using Include="TUnit.Assertions.Extensions" />
   </ItemGroup>
 
   <ItemGroup>
