Fix cursor position on wrong line when prompt wraps
ReadLine calculated _bufferRow from newline count only, ignoring
visual line wraps when a prompt line exceeds terminal width. Added
CalculateVisualPosition that accounts for both newlines and
width-based wrapping, and fixed scroll detection, cursor positioning,
and dropdown restore to use it.

--- a/Jitzu.Shell/Jitzu.Shell.csproj
+++ b/Jitzu.Shell/Jitzu.Shell.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Jitzu.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AsmResolver.DotNet" Version="5.5.1" />
     <PackageReference Include="Clap.Net" Version="0.1.32-beta" />
     <PackageReference Include="CliWrap" Version="3.9.0" />
